--- a/devel/ccache/Makefile
+++ b/devel/ccache/Makefile
@@ -41,7 +41,7 @@ MEMCACHED_BUILD_DEPENDS_OFF=	zstd>=1.1.2:archivers/zstd
 MEMCACHED_LIB_DEPENDS=		libmemcached.so:databases/libmemcached
 MEMCACHED_LDFLAGS=		-L${LOCALBASE}/lib
 MEMCACHED_CFLAGS=		-I${LOCALBASE}/include
-MEMCACHED_CMAKE_ON=		-DZSTD_SYSTEM_STATIC:BOOL=On
+MEMCACHED_CMAKE_OFF=		-DZSTD_SYSTEM_STATIC:BOOL=On
 
 STATIC_CONFIGURE_ENABLE=	static
 
