--- a/devel/ccache/Makefile
+++ b/devel/ccache/Makefile
@@ -57,6 +57,7 @@ MEMCACHED_IGNORE=		MEMCACHED cannot be combined with WITH_CCACHE_BUILD.  Use dev
 
 # Support WITH_CCACHE_BUILD but don't depend on it.
 NO_CCACHE_DEPEND=	yes
+.MAKEFLAGS:		NO_CCACHE_DEPEND=yes
 
 OPTIONS_SUB=	yes
 
